# cloq-agent

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .gitmodules.swp  AGENT.md  CLAUDE.md  FILEMAP.md  LICENSE  MANIFEST.md  NOTICE.md  README.md  RESULTS.md  SPEC.md  manifest.yaml  pyproject.toml  tierA_controls.c  tierB_array_ptr.c  tierC_search.c  tierD_aliasing.c  tierE_negative.c
.github/workflows/: build.yml  ci.yml  nightly.yml
api/: __init__.py  main.py  service.py
config/: api.yaml  default.yaml  local.yaml
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.gui  Dockerfile.rocq  Dockerfile.toolchain  compose.yaml  nginx.conf
docs/: ARCHITECTURE.md  BRINGUP.md  RESULTS.md  SPEC.md
docs/results/: transfer.md
eval/: __init__.py  ablations.py  harness.py  mutate.py  regression_gate.py  replay.py  targets.py  targets.yaml
eval/heldout/: ap_ptr_walk.c  ap_ptr_walk.objdump  ap_sum_u32_inv.v  build_se_find_eq.py  build_se_find_ge.py  measure.py  se_find_eq.c  se_find_eq.objdump  se_find_eq_closer.md  se_find_ge.c  se_find_ge_closer.md
eval/targets/: addloop.objdump  ct_swap.objdump  find_in_array.objdump  uxListRemove.objdump  vListInitialise.objdump  vListInitialiseItem.objdump  vListInsertEnd.objdump
eval/transfer/: PINNED.md  run_transfer.py  targets.yaml
fpga/: README.md
fpga/firmware/: Makefile  mailbox.h  measure_stub.c
fpga/host/: dudect.py  measure.py
fpga/vivado/: build_neorv32_zynq.tcl
gui/: index.html  package.json  vite.config.ts
gui/src/: App.tsx  api.ts  ascii.ts  styles.css  types.ts
gui/src/components/: CorpusPanel.tsx  Header.tsx  ResultPanel.tsx  StageProgress.tsx  UploadForm.tsx
proofs/: .Makefile.coq.d  Makefile  Makefile.coq.conf  _CoqProject
proofs/targets/: Addloop.v  Addloop_gen.v  Addloop_llm_gen.v  Ap_sum_u32_gen.v  Ct_swap_gen.v  Ct_swap_llm_gen.v  Find_in_array_gen.v  Find_in_array_llm_gen.v  Lifted_prog_gen.v  Se_find_eq_gen.v  Se_find_ge_gen.v  Uxlistremove_gen.v  Uxlistremove_llm_gen.v  Vlistinitialise_gen.v  Vlistinitialise_llm_gen.v  Vlistinitialiseitem_gen.v  Vlistinitialiseitem_llm_gen.v  Vlistinsertend_gen.v  Vlistinsertend_llm_gen.v  ap_sum_u32_lifted.v  se_find_eq_lifted.v  se_find_ge_lifted.v
src/cloq_agent/: __init__.py  cli.py  config.py  models.py  pipeline.py  report.py
src/cloq_agent/agent/: __init__.py  invariant_synth.py  orchestrator.py  tactic_repair.py
tests/: test_api.py  test_bottom_test_timing.py  test_cfg.py  test_compile.py  test_config_escalation.py  test_config_profiles.py  test_discharge_robustness.py  test_discharge_search.py  test_disjunctive_timing.py  test_hammer.py  test_intake.py  test_integration_search.py  test_invariant_synth.py  test_loop_scc.py  test_mutate.py  test_orchestrator_accounting.py  test_petanque_state.py  test_petanque_timeout.py  test_pipeline_gate.py  test_premise_check.py  test_rag_index.py  test_replay_harness.py  test_report.py  test_se_find_closes.py  test_se_find_eq_closes.py  test_search_template.py  test_shape_recovery.py  test_store.py  test_store_back.py  test_tactic_repair.py  test_theorem_builder.py
(+32 files in other folders)
